--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "test": "NODE_ENV=test npm run build && mocha ${MOCHA_OPTS}"
   },
   "author": "Zachary Hirschtritt",
   "license": "MIT",
   "dependencies": {
+    "rambda": "^1.2.6",
     "sql-template-strings": "^2.2.2",
     "sqlite": "^3.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/chance": "^1.0.1",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.2",
+    "chai": "^4.2.0",
+    "chance": "^1.0.16",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
   }
