--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/server.js",
     "watch-node": "nodemon dist/index.js",
     "watch-ts": "tsc -w",
     "test": "NODE_ENV=test npm run build && mocha ${MOCHA_OPTS}"
@@ -13,6 +13,11 @@
   "author": "Zachary Hirschtritt",
   "license": "MIT",
   "dependencies": {
+    "@slack/client": "^4.8.0",
+    "@slack/events-api": "^2.1.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "pino": "^5.8.0",
     "rambda": "^1.2.6",
     "sql-template-strings": "^2.2.2",
     "sqlite": "^3.0.0"
@@ -20,11 +25,14 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
+    "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.2",
+    "@types/pino": "^5.8.0",
     "chai": "^4.2.0",
     "chance": "^1.0.16",
     "mocha": "^5.2.0",
+    "pino-pretty": "^2.2.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
